# AdventOfCode

./: .clang-format  CMakeLists.txt
2020/: CMakeLists.txt
2020/src/: common.cc  common.hh  main.cc
2020/src/days/: day1.cc  day10.cc  day13.cc  day15.cc  day16.cc  day19.cc  day2.cc  day23.cc  day4.cc  day5.cc  day9.cc
2021/: CMakeLists.txt
2021/input/: day17
2021/src/: common.hh  main.cc
2021/src/days/: day1.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  template
2022/: CMakeLists.txt
2022/input/: day13  day13_provided  day15
2022/src/: common.h  day0.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day2.cpp  day20.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2023/: CMakeLists.txt
2023/src/: common.h  day0.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp
src/: common.cc  common.hh  main.cc
src/days/: day10.cc  day11.cc  day12.cc  day14.cc  day17.cc  day18.cc  day20.cc  day21.cc  day22.cc  day24.cc  day25.cc  day3.cc  day6.cc  day7.cc  day8.cc  day9.cc
