cmake_minimum_required(VERSION 3.1)

project(advent_of_code_2022)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra -O3")

if (${CMAKE_GENERATOR} STREQUAL "Ninja")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcolor-diagnostics -fansi-escape-codes")
endif ()

add_executable(day0 src/day0.cpp)
add_executable(day1 src/day1.cpp)
add_executable(day2 src/day2.cpp)
add_executable(day3 src/day3.cpp)
add_executable(day4 src/day4.cpp)
add_executable(day5 src/day5.cpp)
add_executable(day6 src/day6.cpp)
add_executable(day7 src/day7.cpp)
add_executable(day8 src/day8.cpp)
add_executable(day9 src/day9.cpp)
add_executable(day10 src/day10.cpp)
add_executable(day11 src/day11.cpp)
add_executable(day12 src/day12.cpp)
add_executable(day13 src/day13.cpp)
add_executable(day14 src/day14.cpp)
add_executable(day15 src/day15.cpp)
add_executable(day16 src/day16.cpp)
add_executable(day17 src/day17.cpp)
add_executable(day18 src/day18.cpp)
add_executable(day19 src/day19.cpp)
add_executable(day20 src/day20.cpp)
add_executable(day21 src/day21.cpp)
add_executable(day22 src/day22.cpp)
add_executable(day23 src/day23.cpp)
add_executable(day24 src/day24.cpp)
add_executable(day25 src/day25.cpp)
add_executable(day26 src/day26.cpp)
add_executable(day27 src/day27.cpp)
add_executable(day28 src/day28.cpp)
add_executable(day29 src/day29.cpp)
add_executable(day30 src/day30.cpp)
add_executable(day31 src/day31.cpp)

add_custom_command(TARGET day0 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day0>/input/)
add_custom_command(TARGET day1 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day1>/input/)
add_custom_command(TARGET day2 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day2>/input/)
add_custom_command(TARGET day3 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day3>/input/)
add_custom_command(TARGET day4 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day4>/input/)
add_custom_command(TARGET day5 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day5>/input/)
add_custom_command(TARGET day6 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day6>/input/)
add_custom_command(TARGET day7 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day7>/input/)
add_custom_command(TARGET day8 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day8>/input/)
add_custom_command(TARGET day9 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day9>/input/)
add_custom_command(TARGET day10 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day10>/input/)
add_custom_command(TARGET day11 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day11>/input/)
add_custom_command(TARGET day12 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day12>/input/)
add_custom_command(TARGET day13 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day13>/input/)
add_custom_command(TARGET day14 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day14>/input/)
add_custom_command(TARGET day15 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day15>/input/)
add_custom_command(TARGET day16 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day16>/input/)
add_custom_command(TARGET day17 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day17>/input/)
add_custom_command(TARGET day18 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day18>/input/)
add_custom_command(TARGET day19 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day19>/input/)
add_custom_command(TARGET day20 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day20>/input/)
add_custom_command(TARGET day21 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day21>/input/)
add_custom_command(TARGET day22 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day22>/input/)
add_custom_command(TARGET day23 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day23>/input/)
add_custom_command(TARGET day24 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day24>/input/)
add_custom_command(TARGET day25 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day25>/input/)
add_custom_command(TARGET day26 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day26>/input/)
add_custom_command(TARGET day27 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day27>/input/)
add_custom_command(TARGET day28 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day28>/input/)
add_custom_command(TARGET day29 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day29>/input/)
add_custom_command(TARGET day30 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day30>/input/)
add_custom_command(TARGET day31 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/input/ $<TARGET_FILE_DIR:day31>/input/)

add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
