cmake_minimum_required(VERSION 3.1)

project(advent_of_code_2022)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra -O3")

if (${CMAKE_GENERATOR} STREQUAL "Ninja")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcolor-diagnostics -fansi-escape-codes")
endif ()

add_executable(day0 src/day0.cpp)
add_executable(day1 src/day1.cpp)
add_executable(day2 src/day2.cpp)
add_executable(day3 src/day3.cpp)
add_executable(day4 src/day4.cpp)
add_executable(day5 src/day5.cpp)
add_executable(day6 src/day6.cpp)
add_executable(day7 src/day7.cpp)
add_executable(day8 src/day8.cpp)
#add_executable(day9 src/day9.cpp)
#add_executable(day10 src/day10.cpp)
#add_executable(day11 src/day11.cpp)
#add_executable(day12 src/day12.cpp)
#add_executable(day13 src/day13.cpp)
#add_executable(day14 src/day14.cpp)
#add_executable(day15 src/day15.cpp)
#add_executable(day16 src/day16.cpp)
#add_executable(day17 src/day17.cpp)
#add_executable(day18 src/day18.cpp)
#add_executable(day19 src/day19.cpp)
#add_executable(day20 src/day20.cpp)
#add_executable(day21 src/day21.cpp)
#add_executable(day22 src/day22.cpp)
#add_executable(day23 src/day23.cpp)
#add_executable(day24 src/day24.cpp)
#add_executable(day25 src/day25.cpp)

add_custom_command(TARGET day0 PRE_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/input/)

add_custom_command(TARGET day0 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day0 ${CMAKE_SOURCE_DIR}/input/day0_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day1 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day1 ${CMAKE_SOURCE_DIR}/input/day1_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day2 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day2 ${CMAKE_SOURCE_DIR}/input/day2_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day3 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day3 ${CMAKE_SOURCE_DIR}/input/day3_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day4 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day4 ${CMAKE_SOURCE_DIR}/input/day4_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day5 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day5 ${CMAKE_SOURCE_DIR}/input/day5_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day6 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day6 ${CMAKE_SOURCE_DIR}/input/day6_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day7 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day7 ${CMAKE_SOURCE_DIR}/input/day7_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
add_custom_command(TARGET day8 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day8 ${CMAKE_SOURCE_DIR}/input/day8_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day9 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day9 ${CMAKE_SOURCE_DIR}/input/day9_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day10 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day10 ${CMAKE_SOURCE_DIR}/input/day10_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day11 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day11 ${CMAKE_SOURCE_DIR}/input/day11_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day12 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day12 ${CMAKE_SOURCE_DIR}/input/day12_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day13 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day13 ${CMAKE_SOURCE_DIR}/input/day13_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day14 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day14 ${CMAKE_SOURCE_DIR}/input/day14_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day15 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day15 ${CMAKE_SOURCE_DIR}/input/day15_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day16 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day16 ${CMAKE_SOURCE_DIR}/input/day16_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day17 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day17 ${CMAKE_SOURCE_DIR}/input/day17_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day18 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day18 ${CMAKE_SOURCE_DIR}/input/day18_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day19 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day19 ${CMAKE_SOURCE_DIR}/input/day19_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day20 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day20 ${CMAKE_SOURCE_DIR}/input/day20_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day21 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day21 ${CMAKE_SOURCE_DIR}/input/day21_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day22 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day22 ${CMAKE_SOURCE_DIR}/input/day22_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day23 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day23 ${CMAKE_SOURCE_DIR}/input/day23_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day24 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day24 ${CMAKE_SOURCE_DIR}/input/day24_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)
#add_custom_command(TARGET day25 POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/input/day25 ${CMAKE_SOURCE_DIR}/input/day25_provided ${CMAKE_CURRENT_BINARY_DIR}/input/)

add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
